--- a/inc/8-lifesafety.tex
+++ b/inc/8-lifesafety.tex
@@ -63,7 +63,7 @@
 
 В зависимости от необходимости, производственное освещение в кабинете может быть как естественным, создаваемым непосредственно солнцем и диффузным (рассеянным) светом, так и искусственным, осуществляемым электрическими лампами.
 Естественное освещение характеризуется тем, что создаваемое освещение изменяется в очень широких пределах, в зависимости от времени года, дня и метеорологических факторов.
-При выборе норм естественного освещения учитывается разряд выполняемых работ, система освещения, коэффициент солнечности, коэффициент светового климата.
+При выборе норм естественного освещения учитывается разряд выполняемых работ, система освещения, коэффициент солнечности, коэффициент светового климата \cite{oot}.
 По СНиП П-4-79 для 3 разряда зрительной работы (контраст большой, фон светлый) освещенность при боковом освещении от окон равна 2.0\%.
 
 Для искусственного освещения учитывается разряд выполняемых зрительных работ, подразряд работы, вид ламп, система освещения.
