--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -74,6 +74,15 @@
     Сост.: Сергеев Г.Г., Скатков А.В., Мащенко Е.Н. -- Севастополь:
     Изд-во СевНТУ, 2005. -- 32с.
 
+\bibitem{oot}
+    Методические указания для выполнения раздела <<Охрана труда и окружающей среды>>
+    в дипломних проектах специальностей
+    7.080401 --- <<Информационные и управляющие системы и технологии>>,
+    7.092502 --- <<Компьютерно-интегрированные технологические процессы и производства>>,
+    7.091401 --- <<Системы управления автоматики>>,
+    7.091501 --- <<Компьютерные системы и сети>> / Сост.: Е.И Азаренко. -- Севастополь:
+    Изд-во СевНТУ, 2005. -- 10с.
+
 % то что использовал пока
 
 \iffalse
