--- a/inc/0-conclusion.tex
+++ b/inc/0-conclusion.tex
@@ -1,3 +1,21 @@
 \anonsection{Заключение}
 
+В ходе выполнения выпускной квалификационной работы бакалавра была разработана виртуальная инфраструктура для реализации облачных услуг.
+Данная инфраструктура успешно используется в бизнесе и обладает высоким уровнем отказоустойчивости, надежности и масштабируемости.
+
+Инфраструктура прошла все этапы проектирования и разработки, начиная от закупки серверов и лицензий на программное обеспечение до окончательного тестирования.
+Тестирование показало, что при отказе некоторых компонентов инфраструктуры включая управляющие сервера, система все еще продолжает функционировать.
+
+Продолжительное время находятся в эксплуатации различные системы виртуализации, такие как OpenVZ и KVM.
+Сочетание работы этих систем в связке с программным обеспечением, ориентированным на пользователей позволяет организовать продажу услуг в сфере облачных вычислений.
+
+В ходе разработки тарифов для пользователей были подобраны оптимальные параметры контейнеров, виртуальных машин и лимитов хостинга.
+Использование свободного программного обеспечения позволило сократить материальные расходы на ПО.
+
+Данная виртуальная инфраструктура может быть расширена за счет использования других систем виртуализаций, таких как Xen, добавления дополнительных обслуживающих серверов, а также улучшение отказоустойчивости за счет применения репликации данных.
+Обновление аппаратной части инфраструктуры также увеличит производительность, однако данные действия требуют материальных затрат.
+
+При анализе безопасности и применении мер по ее обеспечении были использованы и дописаны такие скрипты как DDoS Deflate, который является эффективным решением защиты от небольших DDoS-атак.
+Скрипты не являются законченным продуктом и распространяются под свободной лицензией.
+
 \clearpage
