Поправил раздел БЖД

--- a/inc/8-lifesafety.tex
+++ b/inc/8-lifesafety.tex
@@ -2,7 +2,7 @@
 
 \subsection{Краткая характеристика помещения}
 
-Согласно санитарным нормам, ширина стола должна быть не менее 60~см, глубина не менее 80~см, также необходимо обеспечить расстояние между боковыми поверхностями мониторов не менее 1.2~м.
+Согласно санитарным нормам, ширина стола должна быть не менее 0.6~м, глубина не менее 0.8~м, также необходимо обеспечить расстояние между боковыми поверхностями мониторов не менее 1.2~м.
 
 На рисунке \ref{roomplan} изображена планировка и размещение оборудования на рабочем месте.
 \addimghere{roomplan}{1}{Планировка и размещение оборудования на рабочем месте \\
@@ -33,6 +33,28 @@
 Для поддержания оптимального уровня температуры используется как естественная вентиляция (через двери и окна путем проветривания), так и искусственная (при помощи вентилятора), так как в текущих условиях проживания невозможно установить кондиционер.
 Для обогрева помещения в зимнее время используется водяное отопление.
 
+\subsection{Освещение}
+
+В зависимости от необходимости, производственное освещение в кабинете может быть как естественным, создаваемым непосредственно солнцем и диффузным (рассеянным) светом, так и искусственным, осуществляемым электрическими лампами.
+Естественное освещение характеризуется тем, что создаваемое освещение изменяется в очень широких пределах, в зависимости от времени года, дня и метеорологических факторов.
+При выборе норм естественного освещения учитывается разряд выполняемых работ, система освещения, коэффициент солнечности, коэффициент светового климата \cite{oot}.
+По СНиП II-4-79 для 3 разряда зрительной работы (контраст большой, фон светлый) освещенность при боковом освещении от окон равна 2.0\%.
+
+Для искусственного освещения учитывается разряд выполняемых зрительных работ (разряд II), подразряд работы, вид ламп, система освещения.
+В данном случае подразряд работы будет <<В>> при котором нормируемое значение для комбинированного освещения 2500~лк и 750~лк для общего освещения.
+
+В кабинете имеются светильники с люминесцентными лампами расположены параллельно стене.
+Коэффициент естественного освещения E\textsubscript{H} должен быть не ниже 1.5\%.
+
+Мероприятия, за счет которых выполняются требования норм СНиП II-4-79:
+\begin{itemize}
+  \item проверка, не реже одного раза в год, соответствия освещенности на рабочей поверхности нормам искусственного освещения;
+  \item очистка светильников не реже одного раза в три месяца;
+  \item протирка окон (стекол) не реже двух раз в год.
+\end{itemize}
+
+Освещение рабочих мест в помещении для работы администратора должно планироваться так, чтобы свет не падал прямо в глаза, отсутствовали мерцающие тени, блики, <<мигание>> люминесцентных ламп, яркость должна быть распределена равномерно.
+
 \subsection{Шум и вибрация}
 
 Источниками шума в помещении являются:
@@ -59,34 +81,31 @@
 
 Сравнив допустимый и ожидаемый уровни звука в помещении, видно, что нет необходимости проводить мероприятия по борьбе с шумом.
 
-\subsection{Освещение}
+\subsection{Пожаробезопасность}
 
-В зависимости от необходимости, производственное освещение в кабинете может быть как естественным, создаваемым непосредственно солнцем и диффузным (рассеянным) светом, так и искусственным, осуществляемым электрическими лампами.
-Естественное освещение характеризуется тем, что создаваемое освещение изменяется в очень широких пределах, в зависимости от времени года, дня и метеорологических факторов.
-При выборе норм естественного освещения учитывается разряд выполняемых работ, система освещения, коэффициент солнечности, коэффициент светового климата \cite{oot}.
-По СНиП П-4-79 для 3 разряда зрительной работы (контраст большой, фон светлый) освещенность при боковом освещении от окон равна 2.0\%.
+Пожар в помещении может возникнуть при взаимодействии горючих веществ, окислителя (условия пожара) и источников воспламенения (причина пожара).
+Горючие вещества в кабинете: деревянные столы, двери, полы (паркет), покрытия стен, изоляция соединительных кабелей, жидкости для протирки узлов компьютера и другие.
 
-Для искусственного освещения учитывается разряд выполняемых зрительных работ, подразряд работы, вид ламп, система освещения.
-В данном случае подразряд работы будет <<В>> при котором нормируемое значение для комбинированного освещения 2500~лк и 750~лк для общего освещения.
-
-В кабинете имеются светильники с люминесцентными лампами расположены параллельно стене.
-Коэффициент естественного освещения E\textsubscript{H} должен быть не ниже 1.5\%.
-
-Мероприятия, за счет которых выполняются требования норм СНиП П-4-79:
+Возможные источники и причины возникновения пожара:
 \begin{itemize}
-  \item проверка, не реже одного раза в год, соответствия освещенности на рабочей поверхности нормам искусственного освещения;
-  \item очистка светильников не реже одного раза в три месяца;
-  \item протирка окон (стекол) не реже двух раз в год.
+  \item эксплуатация неиспользованного оборудования;
+  \item неправильное применение электронагревательных приборов;
+  \item неисправность проводки;
+  \item короткое замыкание;
+  \item нарушение правил пожарной безопасности.
 \end{itemize}
 
-Освещение рабочих мест в помещении для работы администратора должно планироваться так, чтобы свет не падал прямо в глаза, отсутствовали мерцающие тени, блики, <<мигание>> люминесцентных ламп, яркость должна быть распределена равномерно. 
+Для отвода тепла от персонального компьютера необходимы работающие вентиляторы, помещение проветривается, поэтому кислород, как окислитель процессов горения, имеется в достаточном количестве.
+Исходя из этого, помещение кабинета, согласно нормам СНиП-II-90-81, по степени пожаробезопасности следует отнести к категории Д (помещения, в которых в обращении находятся негорючие вещества и материалы в холодном состоянии).
+
+В качестве средств тушения пожара применяются углекислотные огнетушители, используемые для тушения электроустановок, находящихся под напряжением.
 
 \subsection{Электробезопасность}
 
 В кабинет электроэнергия поступает для питания персональных компьютеров и электрического освещения.
 Питание осуществляется от трехфазной сети переменного тока напряжением 380/220~В (+10..-15\%) частотой 50~Гц (+1~Гц).
 
-Поскольку помещение сухое (относительная влажность не более 75\%), температура не превышает 30~°С, то, согласно ПУЭ (<<Правилам устройства электроустановок>>), оно не относится к категории помещений повышенной опасности.
+Поскольку помещение сухое (относительная влажность не более 75\%), температура не превышает 30~°С, то, согласно ПУЭ 7 (<<Правилам устройства электроустановок>>), оно не относится к категории помещений повышенной опасности.
 Однако возможна потенциальная опасность поражения людей электрическим током.
 Источниками и причинами опасности являются:
 \begin{itemize}
@@ -106,28 +125,9 @@
 
 Кроме технических, необходимо проведение организационных мероприятий:
 \begin{itemize}
-  \item к работе с электроустановками допускаются только лица, прошедшие инструктаж и проверку знаний правил техники безопасности в соответствии с ГОСТ 12.0.004-79, ПТЭ и ПТБ;
-  \item периодически осуществляется контроль сопротивления электрической изоляции токоведущих частей (в соответствии с требованиями ПУЭ, оно не должно быть ниже 0.5~мм по отношению к корпусу ЭВМ).
+  \item к работе с электроустановками допускаются только лица, прошедшие инструктаж и проверку знаний правил техники безопасности в соответствии с ГОСТ 12.0.004-90, ПТЭ и ПТБ;
+  \item периодически осуществляется контроль сопротивления электрической изоляции токоведущих частей (в соответствии с требованиями ПУЭ 7, оно не должно быть ниже 0.5~мм по отношению к корпусу ЭВМ).
 \end{itemize}
-
-\subsection{Пожаробезопасность}
-
-Пожар в помещении может возникнуть при взаимодействии горючих веществ, окислителя (условия пожара) и источников воспламенения (причина пожара).
-Горючие вещества в кабинете: деревянные столы, двери, полы (паркет), покрытия стен, изоляция соединительных кабелей, жидкости для протирки узлов компьютера и другие.
-
-Возможные источники и причины возникновения пожара:
-\begin{itemize}
-  \item эксплуатация неиспользованного оборудования;
-  \item неправильное применение электронагревательных приборов;
-  \item короткое замыкание;
-  \item неисправность проводки;
-  \item нарушение правил пожарной безопасности.
-\end{itemize}
-
-Для отвода тепла от персонального компьютера необходимы работающие вентиляторы, помещение проветривается, поэтому кислород, как окислитель процессов горения, имеется в достаточном количестве.
-Исходя из этого, помещение кабинета, согласно нормам СНиП-П-90-81, по степени пожаробезопасности следует отнести к категории Д (помещения, в которых в обращении находятся негорючие вещества и материалы в холодном состоянии).
-
-В качестве средств тушения пожара применяются углекислотные огнетушители, используемые для тушения электроустановок, находящихся под напряжением.
 
 \subsection{Эргономика и техническая эстетика}
 
@@ -145,29 +145,16 @@
 \subsection{Режим труда и отдыха}
 
 Работа администратора относится к категории работ связанных с опасными и вредными условиями труда.
-В процессе труда на администратора оказывают действие следующие опасные и вредные производственные факторы.
-Физические:
+В процессе труда на администратора оказывают действие следующие опасные и вредные производственные факторы, физические:
 \begin{itemize}
   \item повышенный уровень статического электричества;
-  \item повышенные уровни запыленности воздуха рабочей зоны;
   \item повышенный уровень шума;
+  \item повышенные уровни запыленности воздуха рабочей зоны;
+  \item повышенная яркость светового изображения;
   \item повышенный или пониженный уровень освещенности;
   \item неравномерность распределения яркости в поле зрения;
-  \item повышенная яркость светового изображения;
   \item повышенное значение напряжения в электрической цепи, замыкание которой может произойти через тело человека.
 \end{itemize}
-
-Химические:
-\begin{itemize}
-  \item напряжение зрения;
-  \item напряжение внимания;
-  \item интеллектуальные нагрузки;
-  \item монотонность труда;
-  \item большой объем информации, обрабатываемой в единицу времени;
-  \item нерациональная организация рабочего места.
-\end{itemize}
-
-Биологическим фактором является повышенное содержание в воздухе рабочей зоны микроорганизмов.
 
 Рациональный режим труда и отдыха --- это правильное чередование работы и перерывов в ней в течение смены, суток, недели, года, устанавливаемое с целью обеспечения высокой производительности труда и сохранения здоровья работающих.
 Основным перерывом является перерыв на обед.
@@ -181,5 +168,14 @@
 \end{itemize}
 
 Режим труда и отдыха должен быть построен в соответствии с особенностями трудовой деятельности пользователей персонального компьютера и характером функциональных изменений со стороны различных систем организма работников.
+
+\subsection{Выводы}
+
+В ходе выполнения работы, была дана краткая характеристика помещения и выполняемых работ.
+Составлен план помещения и размещения оборудования.
+Были определены оптимальные параметры микроклимата, шума, освещения.
+Даны рекомендации по эргономике и режиму труда.
+
+Наиболее неблагоприятными факторами являются микроклимат и искусственное освещение, обеспечиваемое люминесцентными лампами.
 
 \clearpage
