Поправил ГОСТы по БЖД :[

--- a/inc/8-lifesafety.tex
+++ b/inc/8-lifesafety.tex
@@ -20,7 +20,7 @@
 
 В комнате, где находится персональный компьютер, должен поддерживаться определенный температурный режим для нормальной эксплуатации ЭВМ и условий труда администратора.
 
-Параметры воздушной среды в кабинете должны соответствовать требованиям ГОСТ 12.1.005-88 <<Воздух рабочей зоны>>.
+Параметры воздушной среды в кабинете должны соответствовать требованиям ГОСТ 12.1.005-88 <<Общие санитарно-гигиенические требования к воздуху санитарной зоны>>.
 При этом необходимо учитывать, что работа администратора относится к разряду легких работ (разряд 1а --- затраты энергии до 150 ккал/час), а кабинет --- к производственным помещениям.
 
 В помещении имеются источники избыточного тепла:
@@ -38,7 +38,7 @@
 В зависимости от необходимости, производственное освещение в кабинете может быть как естественным, создаваемым непосредственно солнцем и диффузным (рассеянным) светом, так и искусственным, осуществляемым электрическими лампами.
 Естественное освещение характеризуется тем, что создаваемое освещение изменяется в очень широких пределах, в зависимости от времени года, дня и метеорологических факторов.
 При выборе норм естественного освещения учитывается разряд выполняемых работ, система освещения, коэффициент солнечности, коэффициент светового климата \cite{oot}.
-По СНиП II-4-79 для 3 разряда зрительной работы (контраст большой, фон светлый) освещенность при боковом освещении от окон равна 2.0\%.
+По СП 52.13330.2011 <<Естественное и искусственное освещение>> для 3 разряда зрительной работы (контраст большой, фон светлый) освещенность при боковом освещении от окон равна 2.0\%.
 
 Для искусственного освещения учитывается разряд выполняемых зрительных работ (разряд II), подразряд работы, вид ламп, система освещения.
 В данном случае подразряд работы будет <<В>> при котором нормируемое значение для комбинированного освещения 2500~лк и 750~лк для общего освещения.
@@ -46,7 +46,7 @@
 В кабинете имеются светильники с люминесцентными лампами расположены параллельно стене.
 Коэффициент естественного освещения E\textsubscript{H} должен быть не ниже 1.5\%.
 
-Мероприятия, за счет которых выполняются требования норм СНиП II-4-79:
+Мероприятия, за счет которых выполняются требования норм СП 52.13330.2011 <<Естественное и искусственное освещение>>:
 \begin{itemize}
   \item проверка, не реже одного раза в год, соответствия освещенности на рабочей поверхности нормам искусственного освещения;
   \item очистка светильников не реже одного раза в три месяца;
@@ -96,7 +96,7 @@
 \end{itemize}
 
 Для отвода тепла от персонального компьютера необходимы работающие вентиляторы, помещение проветривается, поэтому кислород, как окислитель процессов горения, имеется в достаточном количестве.
-Исходя из этого, помещение кабинета, согласно нормам СНиП-II-90-81, по степени пожаробезопасности следует отнести к категории Д (помещения, в которых в обращении находятся негорючие вещества и материалы в холодном состоянии).
+Исходя из этого, помещение кабинета, согласно нормам СП 2.13130.2012 <<Системы противопожарной защиты. Обеспечение огнестойкости объектов защиты>>, по степени пожаробезопасности следует отнести к категории Д (помещения, в которых в обращении находятся негорючие вещества и материалы в холодном состоянии).
 
 В качестве средств тушения пожара применяются углекислотные огнетушители, используемые для тушения электроустановок, находящихся под напряжением.
 
@@ -125,7 +125,7 @@
 
 Кроме технических, необходимо проведение организационных мероприятий:
 \begin{itemize}
-  \item к работе с электроустановками допускаются только лица, прошедшие инструктаж и проверку знаний правил техники безопасности в соответствии с ГОСТ 12.0.004-90, ПТЭ и ПТБ;
+  \item к работе с электроустановками допускаются только лица, прошедшие инструктаж и проверку знаний правил техники безопасности в соответствии с ГОСТ 12.1.009-76, ПТЭ и ПТБ;
   \item периодически осуществляется контроль сопротивления электрической изоляции токоведущих частей (в соответствии с требованиями ПУЭ 7, оно не должно быть ниже 0.5~мм по отношению к корпусу ЭВМ).
 \end{itemize}
 
@@ -140,8 +140,8 @@
 Огромное значение в эстетическом оформлении производства имеет цвет.
 Окраска, форма, внешний вид производственного помещения и оборудования улучшают условия освещения, а также психологическое состояние человека. Стены имеют светло-зеленый цвет, не вызывающий раздражения, потолок --- белый цвет, что обеспечивает максимальное отражение света.
 
-Рассматриваемое помещение соответствует требованиям ГОСТ 12.2.032-78.
-    	
+Рассматриваемое помещение соответствует требованиям ГОСТ 12.2.032-78 <<Рабочее место при выполнении работ сидя. Общие эргономические требования>>.
+
 \subsection{Режим труда и отдыха}
 
 Работа администратора относится к категории работ связанных с опасными и вредными условиями труда.
