--- a/inc/8-lifesafety.tex
+++ b/inc/8-lifesafety.tex
@@ -29,7 +29,7 @@
   \item тепло, выделяемое персоналом.
 \end{itemize}
 
-Тепловыделение от светильников отсутствует, так как используется люминисцентное освещение.
+Тепловыделение от светильников отсутствует, так как используется люминесцентное освещение.
 Для поддержания оптимального уровня температуры используется как естественная вентиляция (через двери и окна путем проветривания), так и искусственная (при помощи вентилятора), так как в текущих условиях проживания невозможно установить кондиционер.
 Для обогрева помещения в зимнее время используется водяное отопление.
 
@@ -40,11 +40,7 @@
 При выборе норм естественного освещения учитывается разряд выполняемых работ, система освещения, коэффициент солнечности, коэффициент светового климата \cite{oot}.
 По СП 52.13330.2011 <<Естественное и искусственное освещение>> для 3 разряда зрительной работы (контраст большой, фон светлый) освещенность при боковом освещении от окон равна 2.0\%.
 
-Для искусственного освещения учитывается разряд выполняемых зрительных работ (разряд II), подразряд работы, вид ламп, система освещения.
-В данном случае подразряд работы будет <<В>> при котором нормируемое значение для комбинированного освещения 2500~лк и 750~лк для общего освещения.
-
 В кабинете имеются светильники с люминесцентными лампами расположены параллельно стене.
-Коэффициент естественного освещения E\textsubscript{H} должен быть не ниже 1.5\%.
 
 Мероприятия, за счет которых выполняются требования норм СП 52.13330.2011 <<Естественное и искусственное освещение>>:
 \begin{itemize}
@@ -67,17 +63,7 @@
 Постоянный шум оказывает отрицательное воздействие на человека, как биологически, так и психологически, что отражается на качестве работы и общей производительности труда сотрудников.
 Снижается производительность труда и повышается количество допущенных ошибок, некоторые из которых могут быть критическими.
 
-В помещениях для администраторов по ГОСТ 12.1.003-83 <<Шум. Общие требования безопасности>> допустимые уровни звукового давления приведены в таблице \ref{sound-tab}.
 Допустимый уровень звука --- 50~дБА, при работающем оборудовании в кабинете ожидаемый уровень звука --- 40-48~дБА.
-\begin{table}[H]
-  \caption{Допустимые уровни звукового давления}\label{sound-tab}
-  \begin{tabular}{|c|c|}
-  \hline Тип помещения & Допустимые уровни звукового давления \\
-  \hline Служебные помещения & 50~дБА \\
-  \hline Помещения для отдыха & 38~дБА \\
-  \hline 
-  \end{tabular}
-\end{table}
 
 Сравнив допустимый и ожидаемый уровни звука в помещении, видно, что нет необходимости проводить мероприятия по борьбе с шумом.
 
