--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -23,10 +23,10 @@
     \item возможность удаленного доступа к серверам посредством IPMI (Intelligent Platform Management Interface).
 \end{itemize}
 
-Следует предусмотреть возможность развертывания дополнительных виртуальных серверов, для организации DNS-серверов, системы мониторинга и платежной системы.
+Следует предусмотреть возможность развертывания дополнительных виртуальных серверов, для организации DNS-серверов, системы мониторинга, управления адресным пространством и  платежной системы.
 Также необходимо предусмотреть наличие системы хранения данных (СХД) для резервных копий, а также расширение дискового пространства на выделенных серверах.
 
-Для разработки виртуальной инфраструктуры необходимо реализовать следующие этапы:
+Для разработки виртуальной инфраструктуры необходима реализация следующих этапов:
 \begin{itemize}
     \item выбор технологий виртуализации;
     \item выбор физических серверов на основе услуги IaaS в ДЦ;
