--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -9,7 +9,8 @@
 \lstset{
     basicstyle=\small\ttfamily, % Размер и тип шрифта
     breaklines=true, % Перенос строк
-    tabsize=2 % Размер табуляции
+    tabsize=2, % Размер табуляции
+    literate={--}{{-{}-}}2 % Корректно отображать двойной дефис
 }
 
 % Шрифты, xelatex
