--- a/inc/7-testing.tex
+++ b/inc/7-testing.tex
@@ -13,7 +13,7 @@
 
 \subsection{Нагрузка сети во время резервного копирования}
 
-Ежедневно на серверах в ночное время запускается задача резервного копирования, в это время наблюдается повышенная нагрузка на сервере, связанная со снятием дампов баз данных, архивацией и сжатием архивов для передачи по сети на сервер резервного копирования.
+Каждую ночь на серверах запускается задача резервного копирования, в это время наблюдается повышенная нагрузка на сервере, связанная со снятием дампов баз данных, архивацией и сжатием архивов для передачи по сети на сервер резервного копирования.
 
 Как правило повышение нагрузки незначительное, что можно наблюдать на рисунке \ref{top-ok}.
 \addimghere{top-ok}{1}{Состояние системы во время процесса резервного копирования}{top-ok}
