--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -3,70 +3,80 @@
 \begin{thebibliography}{00}
 
 \bibitem{oracle-db}
-    Каталог программных продуктов семейства Oracle
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (11126315 bytes) --
-    Режим доступа: http://oracle.ocs.ru/files/catalog\_Oracle\_Database\_12C.pdf
+    Каталог программных продуктов семейства Oracle Database
+    [Электронный ресурс] //
+    Oracle Россия
+    URL: http://oracle.ocs.ru/files/catalog\_Oracle\_Database\_12C.pdf
+    (дата обращения: 13.04.2015)
 
 \bibitem{dc-tier}
     Tier: уровни надежности ЦОД и что из этого следует
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (38916 bytes) --
-    Режим доступа: http://www.aboutdc.ru/page/390.php
+    [Электронный ресурс] //
+    AboutDC. Решения для ЦОД
+    URL: http://www.aboutdc.ru/page/390.php
+    (дата обращения: 14.04.2015)
 
 \bibitem{ibm-virt}
+    М. Тим Джонс
     Виртуальный Linux. Обзор методов виртуализации, архитектур и реализаций
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (109051 bytes) -- 
-    Режим доступа: http://www.ibm.com/developerworks/ru/library/l-linuxvirt/index.html
+    [Электронный ресурс] //
+    IBM developerWorks Россия: Ресурс IBM для разработчиков и IT профессионалов
+    URL: http://www.ibm.com/developerworks/ru/library/l-linuxvirt/index.html
+    (дата обращения: 14.04.2015)
 
 \bibitem{openvz-tutorial}
+    Умеров А.Р.
     Руководство по созданию и управлению контейнерами на базе OpenVZ 
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (55237 bytes) -- 
-    Режим доступа: https://github.com/Amet13/openvz-tutorial/blob/master/main.pdf
+    [Электронный ресурс] //
+    GitHub
+    URL: https://github.com/Amet13/openvz-tutorial/blob/master/main.pdf
+    (дата обращения: 15.04.2015)
 
 \bibitem{qemu-ibm}
+    М. Тим Джонс
     Эмуляция систем с помощью QEMU
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (84008 bytes) --
-    Режим доступа: http://www.ibm.com/developerworks/ru/library/l-qemu/
+    [Электронный ресурс] //
+    IBM developerWorks Россия: Ресурс IBM для разработчиков и IT профессионалов
+    URL: http://www.ibm.com/developerworks/ru/library/l-qemu/
+    (дата обращения: 16.04.2015)
 
 \bibitem{kvm-ibm}
+    Бхану П. Толети
     Гипервизоры, виртуализация и облако: Анализ гипервизора KVM
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (79196 bytes) --
+    [Электронный ресурс] //
+    IBM developerWorks Россия: Ресурс IBM для разработчиков и IT профессионалов
     Режим доступа: http://www.ibm.com/developerworks/ru/library/cl-hypervisorcompare-kvm/
-
-\bibitem{hyper-v}
-    Hyper-V drivers in mainline kernel - what's next
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (146405 bytes) --
-    Режим доступа: https://social.technet.microsoft.com/Forums/en-US/7007beff-db11-4261-a9f2-0f4461a9cc92/hyperv-drivers-in-mainline-kernel-whats-next
+    (дата обращения: 16.04.2015)
 
 \bibitem{xen-xguru}
+    Чубин Игорь
     Руководство пользователя Xen v3.0
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (272945 bytes) --
-    Режим доступа: http://xgu.ru/xen/manual/
+    [Электронный ресурс] //
+    Xgu.ru
+    URL: http://xgu.ru/xen/manual/
+    (дата обращения: 18.04.2015)
 
 \bibitem{lxc-openvz}
+    Одинцов Павел
     Контейнеризация на Linux в деталях -- LXC и OpenVZ Часть 2
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (186899 bytes) -- 
-    Режим доступа: http://habrahabr.ru/company/FastVPS/blog/209084/
+    [Электронный ресурс] //
+    Хабрахабр
+    URL: http://habrahabr.ru/company/FastVPS/blog/209084/
+    (дата обращения: 19.04.2015)
 
 \bibitem{lxc}
     Виртуализация на уровне ОС: теория и практика LXC
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (118259 bytes) --
-    Режим доступа: http://creativeyp.com/568-virtualizaciya-na-urovne-os-teoriya-i-praktika-lxc.html
+    [Электронный ресурс] //
+    creativeyp.com
+    URL: http://creativeyp.com/568-virtualizaciya-na-urovne-os-teoriya-i-praktika-lxc.html
+    (дата обращения: 20.04.2015)
 
 \bibitem{virt-infrast}
     Основы виртуализации. Инфраструктура
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (32477 bytes) --
-    Режим доступа: http://www.bw-it.ru/virtualization\_virtual\_infrastructure.php
+    [Электронный ресурс] //
+    BW-IT.RU | Информационные технологии
+    URL: http://www.bw-it.ru/virtualization\_virtual\_infrastructure.php
+    (дата обращения: 20.04.2015)
 
 \bibitem{sys-analyz}
     Методические указания <<Процедура системного анализа при проектировании программных систем>>
@@ -82,90 +92,6 @@
     7.091401 --- <<Системы управления автоматики>>,
     7.091501 --- <<Компьютерные системы и сети>> / Сост.: Е.И Азаренко. -- Севастополь:
     Изд-во СевНТУ, 2005. -- 10с.
-
-% то что использовал пока
-
-\iffalse
-\bibitem{antonova-zaika} Лукъянчук А.Г., Антонова Г.З., Заика Е.В. 
-    Положение об организации дипломного проектирования в СевНТУ / 
-    Лукъянчук А.Г., Антонова Г.З., Заика Е.В. -- Севастополь: 
-    Изд-во СевНТУ, 2012. -- 30 с.
-
-\bibitem{skatkov-balakireva} 
-    Методические указания для выполнения типовой выпускной 
-    квалификационной работы бакалавра по тематике анализа эффективности 
-    компьютерных систем обработки данных для студентов направления 
-    6.050102 -- <<Компьютерная инженерия>> дневной и заочной форм обучения / 
-    Сост.: И.А. Балакирева, А.В. Скатков -- Севастополь: Изд-во СевНТУ, 2012. -- 32 с.
-
-\bibitem{espd-gost} 
-    ГОСТ 19.701-90, ЕСПД <<Схемы алгоритмов, программ, данных и систем. 
-    Условные обозначения и правила выполнения>>. 
-    Дата введения: 01.01.1992. -- М: Изд-во стандартов, 1991. -- 26 с.
-
-\bibitem{dstu-gost} 
-    ДСТУ 3008-95 <<Документация. Отчеты в сфере науки и техники. 
-    Структура и правила оформления>>. 
-    Дата введения: 01.01.1996. -- К.: Госстандарт Украины, 1995. -- 37 с.
-
-\bibitem{openvz-essentials} 
-    Mark Furman. OpenVZ Essentials /
-    Mark Furman -- Великобритания: Изд-во Packt Publishing Ltd.,
-    2014. -- 110 с.
-
-\bibitem{mixeev-vmware}
-    Михаил Михеев. Администрирование VMware vSphere 5 / 
-    Михаил Михеев -- Москва: Изд-во ДМК Пресс, 
-    2012. -- 504 с.
-    
-\bibitem{hp-openvz-xen}
-    Performance Evaluation of Virtualization Technologies for Server Consolidation
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (428865 bytes) --
-    Режим доступа: http://www.hpl.hp.com/techreports/2007/HPL-2007-59R1.pdf
-
-\bibitem{xakep-openvz}
-    Виртуальная реальность по-русски: Осваиваем виртуализацию уровня ОС на примере OpenVZ
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (131599 bytes) --
-    Режим доступа: https://xakep.ru/2011/08/27/56244/
-
-\bibitem{ixbt-virt}
-    Виртуализация: новый подход к построению IT-инфраструктуры
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (160658 bytes) --
-    Режим доступа: http://www.ixbt.com/cm/virtualization.shtml
-
-\bibitem{citforum-virt}
-    Технологии виртуализации: вчера, сегодня, завтра
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (111519 bytes) --
-    Режим доступа: http://citforum.ru/operating\_systems/virtualization/
-
-\bibitem{opennet-virtuozzo}
-    Руководство по созданию виртуальных выделенных серверов на базе Virtuozzo
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (839355 bytes) --
-    Режим доступа: http://www.opennet.ru/docs/RUS/virtuozzo/virtuozzo-linux.html.gz
-
-\bibitem{ibm-hypervisors}
-    Гипервизоры, виртуализация и облако: О гипервизорах, виртуализации систем и о том, как это работает в облачной среде
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (87662 bytes) --
-    Режим доступа: http://www.ibm.com/developerworks/ru/library/cl-hypervisorcompare/
-
-\bibitem{opennet-containers}
-    Обзор достижений контейнерной изоляции за последние два года
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (222074 bytes) -- 
-    Режим доступа: http://www.opennet.ru/opennews/art.shtml?num=40126
-
-\bibitem{openvz-benchmarks}
-    Performance -- OpenVZ Linux Containers Wiki
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (37869 bytes) --
-    Режим доступа: http://openvz.org/Performance
-\fi
 
 \end{thebibliography}
 \endgroup
