--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -84,6 +84,19 @@
     Сост.: Сергеев Г.Г., Скатков А.В., Мащенко Е.Н. -- Севастополь:
     Изд-во СевНТУ, 2005. -- 32с.
 
+\bibitem{unix-handbook}
+    Немет Эви, Снайдер Гарт, Хейн Трент, Уэйли Бэн.
+    Unix и Linux: руководство системного администратора,
+    4-е изд.: Пер. с англ. -- М.Ж ООО <<И.Д. Вильямс>>, 2012. --
+    1312 с.: ил.
+
+\bibitem{selectel}
+    Балансировка нагрузки: основные алгоритмы и методы
+    [Электронный ресурс] //
+    Блог компании Селектел
+    URL: http://blog.selectel.ru/balansirovka-nagruzki-osnovnye-algoritmy-i-metody/
+    (дата обращения: 06.05.2015)
+
 \bibitem{oot}
     Методические указания для выполнения раздела <<Охрана труда и окружающей среды>>
     в дипломних проектах специальностей
