--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -1,4 +1,4 @@
-\section{Обзор современных методов и технологий серверной виртуализации}
+\section{Обзор современных методов и технологий серверной виртуализации} \label{literature}
 
 Понятие облачных вычислений на сегодняшний день уже достаточно хорошо известно и в информационных технологиях (ИТ) и бизнесе.
 Облачные вычисления являются новой сервисной моделью предоставления вычислительных услуг.
