--- a/inc/4-description.tex
+++ b/inc/4-description.tex
@@ -1,32 +1,49 @@
 \section{Описание виртуальной инфраструктуры}
 
-\subsection{Схема взаимодействия пользователя с инфраструктурой}
-
-Схема взаимодействия пользователя с инфраструктурой представлена на рисунке \ref{user-infrast-scheme}.
-\addimghere{user-infrast-scheme}{1}{Схема взаимодействия пользователя с инфраструктурой}{user-infrast-scheme}
-
 \subsection{Общая схема инфраструктуры}
 
 Общая схема инфраструктуры представлена на рисунке \ref{infrast-scheme}.
 \addimghere{infrast-scheme}{1}{Общая схема инфраструктуры}{infrast-scheme}
+
+В дата-центре 1 располагается основная часть инфраструктуры: сервера shared-хостинга, виртуализации OpenVZ и KVM, сервер резервного копирования и выделенные сервера клиентов.
+
+В дата-центре 2 на двух арендованных виртуальных машинах находится один из подчиненных DNS-серверов, а также сервер мониторинга.
+
+На физических серверах располагаются важные элементы инфраструктуры: главный и один подчиненный DNS-сервера, система биллинга и система управления IP-адресами.
 
 \subsection{Схема мониторинга}
 
 Схема мониторинга инфраструктуры представлена на рисунке \ref{nagios-munin-scheme}.
 \addimghere{nagios-munin-scheme}{1}{Схема мониторинга инфраструктуры}{nagios-munin-scheme}
 
+В случае возникновения проблемы на одном из серверов, Nagios фиксирует изменения и отправляет текстовые уведомления по SMS и электронной почте дежурному администратору, который следит за системой мониторинга.
+Nagios работает по протоколу NRPE (Nagios Remote Plugin Executor) и слушает порт 5666.
+
+Munin имеет возможность визуализировать состояние ресурсов с помощью графиков, наблюдая за графиками можно делать выводы о событиях, происходящих в инфраструктуре.
+Munin работает по протоколу MGF (Munin Graphing Framework) на порту 4949.
+
+Помимо физических серверов, мониторятся также виртуальные машины, на которых располагаются сервисы инфраструктуры, а также некоторые виртуальные машины клиентов, по требованию.
+
 \subsection{Схема репликации и балансировки нагрузки DNS-серверов}
 
-Схема репликации и балансировки нагрузки DNS-серверов представлена на рисунке \ref{dns-scheme}.
+С целью обеспечения отказоустойчивости системы была разработана следующая схема репликации и балансировки нагрузки DNS-серверов.
+Схема представлена на рисунке \ref{dns-scheme}.
 \addimghere{dns-scheme}{1}{Схема репликации и балансировки нагрузки DNS-серверов}{dns-scheme}
+
+В каждой зоне есть один главный сервер имен на котором хранится официальная копия данных зоны.
+Администратор модифицирует информацию, касающуюся зоны, редактируя файлы главного сервера \cite{unix-handbook}.
+Подчиненный (slave) сервер копирует свои данные с главного сервера посредством операции, называемой передачей зоны (zone transfer).
+В зоне имеется два подчиненных сервера, один из которых располагается в другом дата-центре.
+
+На главном сервере установлен DNS-сервер PowerDNS.
+На подчиненных серверах --- BIND 9.
+
+Балансировка нагрузки осуществляется по алгоритму Round Robin (алгоритм кругового обслуживания).
+Алгоритм представляет собой перебор по круговому циклу: первый запрос передается одному серверу, затем следующий запрос передается другому и так до достижения последнего сервера \cite{selectel}.
 
 \subsection{Используемые технологии виртуализации}
 
-Схема взаимодействия виртуализации OpenVZ изображена на рисунке \ref{openvz-infrast-scheme}.
-\addimghere{openvz-infrast-scheme}{1}{Схема взаимодействия виртуализации OpenVZ}{openvz-infrast-scheme}
-
-Схема взаимодействия виртуализации KVM изображена на рисунке \ref{kvm-infrast-scheme}.
-\addimghere{kvm-infrast-scheme}{1}{Схема взаимодействия виртуализации KVM}{kvm-infrast-scheme}
+На основе обзора литературы, проведенного в пункте \ref{literature}, выбраны и внедрены технологии виртуализации OpenVZ и KVM.
 
 \subsection{Алгоритм функционирования инфраструктуры}
 
