Добавил алгоритм взаимодействия пользователя с инфраструктурой

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -87,7 +87,7 @@
 \bibitem{unix-handbook}
     Немет Эви, Снайдер Гарт, Хейн Трент, Уэйли Бэн.
     Unix и Linux: руководство системного администратора,
-    4-е изд.: Пер. с англ. -- М.Ж ООО <<И.Д. Вильямс>>, 2012. --
+    4-е изд.: Пер. с англ. -- М.: ООО <<И.Д. Вильямс>>, 2012. --
     1312 с.: ил.
 
 \bibitem{selectel}
