--- a/inc/4-description.tex
+++ b/inc/4-description.tex
@@ -47,4 +47,66 @@ Munin работает по протоколу MGF (Munin Graphing Framework) н
 
 \subsection{Алгоритм функционирования инфраструктуры}
 
+\subsubsection{Алгоритм взаимодействия пользователя с инфраструктурой}
+
+Взаимодействие пользователя с инфраструктурой происходит по следующим сценариям.
+
+Сценарий 1. Заказ облачного сервиса:
+\begin{enumerate}
+  \item Пользователь обращается к инфраструктуре через веб-интерфейс с целью заказа услуги;
+  \item Биллинг регистрирует нового пользователя;
+  \item Заключается договор на предоставление услуги с указанием реквизитов пользователя;
+  \item Подсистема управления услугами производит выделение физического либо виртуального сервера (контейнера, виртуальной машины), либо иной услуги с требуемыми характеристиками;
+  \item Переход к сценарию 2.
+\end{enumerate}
+
+Сценарий 2. Использование сервиса:
+\begin{enumerate}
+  \item Клиент пользуется предоставленным сервисом некоторый период времени, используя веб-интерфейс (VNC, SSH);
+  \item Биллинг выставляет счет пользователю за оказанные услуги;
+  \item Пользователь оплачивает сервис;
+  \item Переход к пункту а, пока не наступит событие, соответствующее сценариям 3, 4, 5, 6 или 7.
+\end{enumerate}
+
+Сценарий 3. Изменение условий предоставления сервиса:
+\begin{enumerate}
+  \item Пользователь желает изменить условия предоставления сервиса, либо отказаться от него;
+  \item Биллинг регистрирует запрос;
+  \item Подсистема управления услугами производит изменение условий предоставления сервиса или удаляет его;
+  \item Переход к сценарию 2, в случае продолжения оказания сервиса, иначе к сценарию 5.
+\end{enumerate}
+
+Сценарий 4. Окончание срока действия договора:
+\begin{enumerate}
+  \item У пользователя окончился срок действия договора;
+  \item Биллинг блокирует услуги;
+  \item Если пользователь желает продлить срок действия договора, переход к сценарию 6, иначе к сценарию 5.
+\end{enumerate}
+
+Сценарий 5. Окончание использования облачной услуги:
+\begin{enumerate}
+  \item Пользователь желает завершить использование сервиса;
+  \item Биллинг регистрирует отмену использования сервиса;
+  \item Подсистема управления услугами удаляет пользовательскую услугу (выделенный сервер, контейнер, виртуальная машина) из списка используемых.
+\end{enumerate}
+
+Сценарий 6. Продление договора:
+\begin{enumerate}
+  \item Пользователь обращается к инфраструктуре через веб-интерфейс с целью продления срока действия договора;
+  \item Биллинг регистрирует факт заключения нового договора;
+  \item Переход к сценарию 2.
+\end{enumerate}
+
+Сценарий 7. Возникновение проблем в работе услуги:
+\begin{enumerate}
+  \item Пользователь обращается к биллингу через веб-интерфейс с целью предоставления заявки на устранение проблемы и информации о возникшей проблеме;
+  \item Биллинг регистрирует запрос и направляет его технической поддержке;
+  \item Техническая поддержка первого уровня устраняет проблему, если нет, то заявка передается в отдел системного администрирования;
+  \item Переход к сценарию 2.
+\end{enumerate}
+
+\subsubsection{Алгоритм взаимодействия компонентов инфраструктуры}
+
+\underline{\texttt{\textit{\textbf{Накидать сценарии + эти два алгоритма на чертежи}}}}
+
 \clearpage
